Rework CMake boost including

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.19)
 project(Dna_Reparation LANGUAGES CXX)
 
+cmake_policy(SET CMP0167 OLD)
+
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
@@ -8,9 +10,10 @@ set(CMAKE_AUTORCC ON)
 find_package(Qt5 REQUIRED COMPONENTS Core Widgets)
 find_package(Geant4 REQUIRED ui_all vis_all)
 find_package(ROOT REQUIRED CONFIG)
+find_package(Boost)
 
 #TODO исправить статичный путь
-include_directories("C:/boost_1_88_0")
+# include_directories("C:/boost_1_88_0")
 include(${ROOT_USE_FILE})
 
 file(GLOB sources ${PROJECT_SOURCE_DIR}/*.cc)
@@ -31,6 +34,7 @@ target_include_directories(${PROJECT_NAME}
         ${PROJECT_SOURCE_DIR}
         ${Geant4_INCLUDE_DIRS}
         ${CMAKE_CURRENT_SOURCE_DIR}
+        ${Boost_INCLUDE_DIR}
 )
 
 # Линкуем с Qt и Geant4
@@ -43,7 +47,8 @@ target_link_libraries(${PROJECT_NAME}
         # DNARepair
 )
 
-message(STATUS "ROOT libraries: ${ROOT_LIBRARIES}")
-message(STATUS "ROOT include dirs: ${ROOT_INCLUDE_DIRS}")
+message(STATUS "Boost_INCLUDE_DIR = ${Boost_INCLUDE_DIR}")
+message(STATUS "Boost_LIBRARY_DIR = ${Boost_LIBRARY_DIR}")
+message(STATUS "Boost_LIBRARIES = ${Boost_LIBRARIES}")
 
 include(GNUInstallDirs)
